# autoTranslator

./: .gitignore  Cargo.toml
src/: audio_player.rs  azure_clients.rs  camera_capture.rs  google_client.rs  main.rs  utils.rs
