[package]
name = "autoTranslator"
version = "0.1.0"
edition = "2021"

[dependencies]
nokhwa = { version = "0.10.7", features = ["input-native", "output-wgpu"] }
aws-sdk-polly = "1.59"
aws-types = "1.3"
aws-config = "1.5"
tokio = { version = "1.43", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
serde = "1.0"
serde_json = "1.0"
soloud = "1.0"
image = "0.25"
text_io = "0.1"