[package]
name = "auto_translator"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.94", features = ["default"] }
tokio = { version = "1.45", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
soloud = "1.1"
image = "0.25"
text_io = "0.1"